Refactored context-notify API